syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
import "Protos/common.proto";
import "Protos/Status/status.proto";

option csharp_namespace = "ToDo.Web.Protos.Tasks";

message Task {
    int32 id = 1;
    google.protobuf.Timestamp creationDate = 2;
    google.protobuf.Timestamp modificationDate = 3;
    int32 creationUserId = 4;
    int32 modificationUserId = 5;
    string title = 6;
    Status status = 7;
}

message TaskPageModel {
    repeated Task pageItems = 1;
    int32 totalItems = 2;
    int32 currentPageIndex = 3;
}